------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Mon Aug 20 01:22:32 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reformatted and spellchecked various documents.
	* Added first draft of Documentation/HTML/vt100.html which
	  will document the requirements of a VT-100 interface as
	  extracted from the Digital VT100 User Guide.

Fri Aug 17 17:43:14 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Optimized character queue code.
	* Changed tty code to keep settings after every tty_open()
	* Added support for 57600 and 115200 bauds in serial driver.
	* Changed the Configure.help entry for CONFIG_INET.

Tue Aug 14 22:18:01 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Revamped keymap system to make it easier to add new keymaps.

Tue Aug 14 10:46:47 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Added INSTALLATION document submitted on Linux-8086 mailing
	  list, after reformatting and HTML'ising.
	* Added README document submitted on Linux-8086 mailing list,
	  after reformatting.
	* Changed all vger.rutgers.edu to vger.kernel.org in above.
	* Added `renvar` script to scripts directory.

Mon Aug 13 22:58:15 BST 2001	Peter L Vachuska <pvachusk@nconnect.net>

	* Added DVORAK keyboard layout and options.

Mon Aug 13 18:50:50 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Renamed configuration variables such that all such variables
	  that are mentioned in the [Cc]onfig.in files now have names
	  beginning with CONFIG_ as per recommendations. This involved
	  remapping variable names as follows:

	GET_DISKPARAM_BY_INT13_NO_SEEK	CONFIG_HW_NO_SEEK_FOR_FLOPPY
	ROM_8253_100HZ			CONFIG_HW_8253_VALUE_FOR_100HZ
	ROM_ADD_BIOS			CONFIG_ROM_ADD_BIOS_IMAGE
	ROM_BASIS			CONFIG_ROM_BASE